# dnd-stat-tracker

./: Cargo.toml  readme.md
res/: characterstest character.json
res/characters/: Alden Kass.json  btiyibeytetyiimy.json  druga postać.json  edited dsajhsdfj.json  ndrynidynirdryninrdyi.json  ryiyiryi.json  siema to ja.json  tego chloip a nie powinno byc.json  test character.json  u7777678.json
res/spells/: 1_lvl_spells.json  2_lvl_spells.json  3_lvl_spells.json  4_lvl_spells.json  5_lvl_spells.json  6_lvl_spells.json  7_lvl_spells.json  8_lvl_spells.json  9_lvl_spells.json  cantrips.json  spell_level_0.json  spell_level_1.json  spell_level_2.json  spell_level_3.json  spell_level_4.json  spell_level_5.json  spell_level_6.json  spell_level_7.json  spell_level_8.json  spell_level_9.json
src/: app.rs  character.rs  dnd_utils.rs  main.rs  ui.rs  ui_widgets.rs
src/dnd_logic/: character.rs  class.rs  death_saves.rs  dice.rs  mod.rs  money.rs  prelude.rs  skill.rs  skill_type.rs  spell.rs  spell_list.rs  stat_type.rs  stats.rs  utils.rs
