[package]
name = "dnd_stat_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.25"
eframe = "0.25"
epaint = "0.25"
egui_extras = "0.25"
strum = "0.25"
strum_macros = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"